--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <a href="?v=1.0.9&page=0"><div class="header">CHRISTOPHE-LANDRY</div></a>
   <div id="data"></div>
   <script>
-    var link = "https://raw.githubusercontent.com/Flammrock/flammrock.github.io/master/statictest/liens.txt?" + new Date().getTime();
+    var link = "https://raw.githubusercontent.com/Flammrock2/flammrock2.github.io/main/liens.txt?" + new Date().getTime();
     var items_per_page = 10;
     
     
